--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -24,6 +24,12 @@
 		<li><a href="essai10.html">essai11</a> TTS avec AndGWS</li>
 	</ul>
 
+	<h2>Autres</h2>
+	<ul>
+	<li><a href="/clients/HtmlCli/htmlCli.html">htmlCli</a></li>
+	</ul>
+
+
 	<h2>À creuser</h2>
 	<p>YouTube</p>
 	<p>
