--- a/public/clients/HtmlCli/htmlCli.html
+++ b/public/clients/HtmlCli/htmlCli.html
@@ -42,6 +42,14 @@ html, body {
 
 		require([ 'jquery', 'jplayer' ], function($) {
 
+			/*
+			// Native full screen.
+			var element=document.body;
+		    var requestMethod = element.requestFullScreen || element.webkitRequestFullScreen || element.mozRequestFullScreen || element.msRequestFullscreen;
+		    if (requestMethod)
+		        requestMethod.call(element);
+		    */
+
 			displayWaitForInstruction();
 
 			// debug/essai
@@ -291,6 +299,9 @@ html, body {
 				+' width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" />';
 
 			$('#playground').html(html);
+
+			// try to change the background color of iframe source page
+			//document.getElementById('theIframe').contentWindow.document.body.style.backgroundColor = 'black' ;
 
 			if( message.play_duration==0 && message.play_loop=='1' )
 			{
