--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -31,6 +31,11 @@
 
 
 	<h2>À creuser</h2>
+	
+	<h3>Vidéos</h3>
+	
+	<p><a href="http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v">http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v</a></p>
+	
 	<p>YouTube</p>
 	<p>
 		<a href="https://github.com/tylerpearson/lazyYT">lazyYT.js</a> This is
