fucking browsers compt... pb with Websockets & videos...

--- a/public/clients/essais/index.html
+++ b/public/clients/essais/index.html
@@ -26,7 +26,8 @@
 
 	<h2>Autres</h2>
 	<ul>
-	<li><a href="/clients/HtmlCli/htmlCli.html">htmlCli</a></li>
+		<li><a href="/clients/HtmlCli/htmlCli.html">htmlCli</a></li>
+		<li><a href="/clients/HtmlCli/viewLocalStorage.html">viewLocalStorage</a></li>
 	</ul>
 
 
@@ -35,7 +36,9 @@
 	<h3>Vidéos</h3>
 	
 	<p><a href="http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v">http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v</a></p>
-	
+
+	<p>Archived Flash Player versions: <a href="http://helpx.adobe.com/flash-player/kb/archived-flash-player-versions.html">http://helpx.adobe.com/flash-player/kb/archived-flash-player-versions.html</a></p>
+
 	<p>YouTube</p>
 	<p>
 		<a href="https://github.com/tylerpearson/lazyYT">lazyYT.js</a> This is
