--- a/public/clients/HtmlCli/htmlCli.html
+++ b/public/clients/HtmlCli/htmlCli.html
@@ -34,6 +34,8 @@ html, body {
 	<script type="text/javascript">
 		"use strict";
 
+		log('starting htmlCli');
+
 		var worker = null;
 		var messagePlaying = null ;
 		var staticMediaTimer = null ;
@@ -70,9 +72,22 @@ html, body {
 		 */
 		function workerOnMessage(e) {
 
-			log('htmlCli received a message: '+e.data.id);
+			log('htmlCli received a message: type='+e.data.type);
 			log(e);
 
+			if( e.data.type == 'say')
+			{
+				log('worker say: "'+e.data.message+'"');
+				return ;
+			
+			} else if( e.data.type == 'log'){
+				log( e.data.message );
+				return ;
+			
+			} else if( e.data.type != 'botq'){
+				log('unknow message type "'+e.data.type+'"');
+				return ;
+			}
 
 			if( messagePlaying != null )
 			{
@@ -81,7 +96,7 @@ html, body {
 					staticMediaTimer = null ;
 				}
 				// Abort current message
-				messagePlayDone(messagePlaying, 'aborted', 'Replaced by message '+e.data.id);
+				messagePlayDone(messagePlaying, 'aborted', 'Replaced by message '+e.data.message.id);
 			}
 			else
 			{
@@ -93,27 +108,27 @@ html, body {
 				}
 			}
 
-			messagePlaying = e.data ;
+			messagePlaying = e.data.message ;
 
 			try
 			{
-				if( e.data.content_type.indexOf('video/') == 0) {
+				if( messagePlaying.content_type.indexOf('video/') == 0) {
 					displayVideo(messagePlaying);
 
-				} else if( e.data.content_type == 'application/url' ) {
+				} else if( messagePlaying.content_type == 'application/url' ) {
 					displayHtmlUrl(messagePlaying);
 
-				} else if( e.data.content_type == 'text/plain' ) {
+				} else if( messagePlaying.content_type == 'text/plain' ) {
 					displayPlainText(messagePlaying);
 
-				} else if( e.data.content_type == 'application/tts' ) {
+				} else if( messagePlaying.content_type == 'application/tts' ) {
 					displayTts(messagePlaying);
 
-				} else if( e.data.content_type == 'application/service' ) {
+				} else if( messagePlaying.content_type == 'application/service' ) {
 					displayService(messagePlaying);
 
 				} else {
-					log('ERROR: unknow message content_type "'+e.data.content_type+'" !');
+					log('ERROR: unknow message content_type "'+messagePlaying.content_type+'" !');
 					messagePlayDone(messagePlaying, 'error', 'Unknow message content_type');
 				}
 
@@ -254,18 +269,34 @@ html, body {
 
 			var connection = new WebSocket( url );
 
+			// some WebSocket implementation (Dolphin) does not throw an "error" event but only "close" event when tts server is not accessible.
+			// others implementation throw the 2 events.
+			var messagePlayDoneSent = false ;
+			var connectionOpened = false ;
+
 			connection.onopen = function () {
 				log('TTS WebSocket Opened');
+				connectionOpened = true ;
 				//connection.send('Ping');
 				connection.send( JSON.stringify( {action:"speak",message: content.text} ) );
 			};
 			connection.onclose = function(event) {
 				log('TTS WebSocket Closed');
+				if( ! messagePlayDoneSent ){
+					messagePlayDoneSent = true ;
+					if( connectionOpened )
+						messagePlayDone(ttsMessage, 'done');
+					else
+						messagePlayDone(ttsMessage, 'error', 'TTS WebSocket open failed');
+				}
 			};
 			connection.onerror = function (error) {
 				log('TTS WebSocket Error!');
 				log(error);
-				messagePlayDone(ttsMessage, 'error', 'TTS WebSocket Error');
+				if( ! messagePlayDoneSent ){
+					messagePlayDoneSent = true ;
+					messagePlayDone(ttsMessage, 'error', 'TTS WebSocket Error');
+				}
 			};
 			connection.onmessage = function (e) {
 				log('TTS WebSocket message: ' + e.data);
@@ -284,7 +315,8 @@ html, body {
 					break;
 				case 'error':
 					log( 'ERROR: TTS encured an error: ' + obj.message+', data: '+obj.data );
-					messagePlayDone(ttsMessage, 'Error: '+ obj.message+', data: '+obj.data);
+					messagePlayDoneSent = true ;
+					messagePlayDone(ttsMessage, 'error', 'Error: '+ obj.message+', data: '+obj.data);
 					break;
 				default:
 					log( 'ERROR: Unknow tts websocket message : ' + e.data );
@@ -366,11 +398,14 @@ html, body {
 			//log(media_supplied);
 			//log(media);
 			$("#jquery_jplayer").jPlayer({
+				//errorAlerts: true,
+				//warningAlerts: true,
 				cssSelectorAncestor : "#jp_container",
-				preload : 'auto',
-				supplied : media_supplied,
-				solution : 'html, flash',
-				size : {
+				preload: 'auto',
+				supplied: media_supplied,
+				swfPath: '/js/jplayer/dist/jplayer',
+				solution: 'flash,html',
+				size: {
 					width : "" + window.innerWidth + "px",
 					height : "" + window.innerHeight + "px"
 				},
@@ -389,24 +424,35 @@ html, body {
 				error : function(e) {
 					log('jPlayer.error');
 					log(e);
-					messagePlayDone(videomessage, 'error', 'error ' + e );
+					//messagePlayDone(videomessage, 'error', 'error ' + e.jPlayer.error.type +', '+e.jPlayer.error.context +', '+e.jPlayer.error.message  );
+					if( e.type == 'jPlayer_error' )
+						messagePlayDone(videomessage, 'error', 'Error: '+JSON.stringify(e.jPlayer.error) );
+					else
+						messagePlayDone(videomessage, 'error', 'Error: '+e.type );
 				},
 				suspend : function(e) {
-					// The user agent is intentionally not currently fetching media data. 
 					//log('jPlayer.suspend');
-					//log(e);
 				},
 				stalled : function(e) {
 					log('jPlayer.stalled');
 					log(e);
-					messagePlayDone(videomessage, 'error', 'stalled '+e );
+					messagePlayDone(videomessage, 'error', 'stalled' );
 				},
 				abort : function(e) {
 					log('jPlayer.abort');
 					log(e);
-					messagePlayDone(videomessage, 'error', 'abort '+e );
+					messagePlayDone(videomessage, 'error', 'abort' );
+				},
+				emptied : function(e) {
+					log('jPlayer.emptied');
+					log(e);
+					messagePlayDone(videomessage, 'error', 'emptied' );
+				},
+				waiting : function(e) {
+					log('jPlayer.waiting');
+					log(e);
+					messagePlayDone(videomessage, 'error', 'waiting' );
 				}
-
 			});
 		}
 
